--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "graphql-import": "^1.0.2",
-    "schema-tools": "^0.1.0"
+    "schema-tools": "^0.1.0",
+    "typescript": "^3.9.2"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^1.13.5",
@@ -32,7 +33,6 @@
     "@types/node": "^14.0.1",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4",
-    "ts-node": "^8.10.1",
-    "typescript": "^3.9.2"
+    "ts-node": "^8.10.1"
   }
 }
