--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,5 @@
             "*": ["node_modules/*", "src/types/*"]
         }
     },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules"]
+    "include": ["src/**/*"]
 }
