--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "graphql-import": "^1.0.2",
-    "schema-tools": "^0.1.0",
+    "graphql-tools": "^5.0.0",
     "typescript": "^3.9.2"
   },
   "devDependencies": {
