decode strings from trivia api

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "generate:schema-types": "graphql-codegen"
   },
   "dependencies": {
+    
     "apollo-datasource-rest": "^0.9.0",
     "apollo-server-express": "^2.13.1",
     "dotenv": "^8.2.0",
@@ -21,10 +22,12 @@
     "graphql": "^15.0.0",
     "graphql-import": "^1.0.2",
     "graphql-tools": "^5.0.0",
+    "he": "^1.2.0",
     "qs": "^6.9.4",
     "typescript": "^3.9.2"
   },
   "devDependencies": {
+    "@types/he": "^1.1.1",
     "@graphql-codegen/add": "^1.13.5",
     "@graphql-codegen/cli": "^1.13.5",
     "@graphql-codegen/typescript": "^1.13.5",
